--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "node-sass": "^4.14.1",
+    "swiper": "^6.8.4",
     "vue": "^3.0.0"
   },
   "devDependencies": {
