--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "hooper": "^0.3.4",
     "node-sass": "^4.14.1",
     "swiper": "^6.8.4",
     "vue": "^3.0.0"
   },
   "devDependencies": {
+    "@types/uuid": "^8.3.4",
     "@vue/cli-plugin-babel": "~4.5.15",
     "@vue/cli-plugin-eslint": "~4.5.15",
     "@vue/cli-service": "~4.5.15",
